[package]
name = "webdav"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "31corefs-webdav"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"
dav-server = { version = "0.8.0", features = ["actix-compat"] }
futures-util = "0.3.31"
lib31corefs = { git = "https://github.com/31core/31corefs.git" }
tokio = { version = "1.45.1", features = ["full"] }
