[package]
name = "webdav"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "31corefs-webdav"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
actix-web = "4.12"
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.1"
dav-server = { version = "0.8.0", features = ["actix-compat"] }
fs31core = { git = "https://github.com/31core/31corefs.git" }
futures-util = "0.3.31"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
